--- a/哗啦啦面试.md
+++ b/哗啦啦面试.md
@@ -1,6 +1,16 @@
-1.浏览器渲染机制+css加载，js加载
-2.vue 对数组的处理，nextTick源码
+1.浏览器渲染机制   css加载   js加载
+>https://blog.csdn.net/weixin_42681295/article/details/123477009
+
+2.vue 对数组的处理，nextTick源码 
+> https://zhuanlan.zhihu.com/p/83218117
+
 3.微前端的讲解
+
 4.虚拟列表
+> https://juejin.cn/post/6877507011769008135
+
 5.排序算法
+冒泡排序优化
+
 6.监控平台的亮点
+> https://blog.csdn.net/weixin_34929433/article/details/123115601
