--- a/蓝湖面试.md
+++ b/蓝湖面试.md
@@ -1,7 +1,13 @@
-1.on,off,once,emit实现原理
+<!-- 订阅观察者模式的 -->
+1.on,off,once, emit实现原理
+
 2.webpack构建流程，说的详细一点
+
 3.vue2和vue3的最大区别，vue3 中ref ，reactive用法原理
+
 4.new 一个对象发生了什么？
 5.new Vue都干了什么？
+https://blog.csdn.net/CSDN_aliang/article/details/113976896
+
 6.esM 与 commonjs的区别
 7.讲讲微任务宏任务
