--- a/用友面试.md
+++ b/用友面试.md
@@ -1,16 +1,14 @@
-/**
- * 判断是否是有效括号
- */
-'{[()]}'
+## 判断是否是有效括号
 
+```js
+{[()]}
+```
 
+{ [ ( ) ] }
 
+## 实现一个数的开方
 
-
-/**
- * 实现一个数的开方
- */
-``` js
+```js
 mySqrt(x) {
     if (x < 0) {
         return NaN
